# aumos-testing-harness

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_testing_harness/: __init__.py  main.py  settings.py
src/aumos_testing_harness/adapters/: __init__.py  adversarial_tester.py  agent_evaluator.py  benchmark_library.py  conversation_evaluator.py  coverage_analyzer.py  custom_metric_runner.py  kafka.py  llm_evaluator.py  performance_benchmarker.py  privacy_tester.py  rag_evaluator.py  red_team_runner.py  regression_detector.py  report_generator.py  repositories.py  synthetic_data_tester.py
src/aumos_testing_harness/api/: __init__.py  router.py  schemas.py
src/aumos_testing_harness/core/: __init__.py  interfaces.py  models.py  services.py  synthetic_data.py
src/aumos_testing_harness/templates/: __init__.py  eu_ai_act.py
tests/: __init__.py  conftest.py  test_api.py  test_repositories.py  test_services.py
